# robots-or-smth

./: Cargo.toml  README.MD
asesprite_files/: rk550.ase  rk550_attack.ase  rk550_idle.aseprite  rk550_walk.ase
assets/: default_input.input
assets/animations/: rk550.anim  rk550.unit_anim  robot.anim
assets/maps/: default_map.map
assets/robots/: rk550.unit
assets/shaders/: bar_shader.frag  bar_shader.vert  sprite_shader.frag  sprite_shader.vert  sprite_sheet_shader.frag  tilemap_shader.frag  tilemap_shader.vert
assets/sound/: rk550_attack.txt
assets/tile_maps/: default_map.tile_map  default_tile_set.tile_set
assets/units/: rk550.unit
blender_files/: grass_tile.blend  grass_tile.blend1  robot-thing.blend  robot-thing.blend1
src/: animation.rs  asset_loading.rs  audio.rs  bar.rs  behaviour.rs  client.rs  command.rs  connection.rs  input.rs  isometric.rs  main.rs  map.rs  mouse_position.rs  movement.rs  network.rs  position.rs  selection.rs  server.rs  size.rs  spawnable.rs  sprite_shader.rs  tile_map.rs  tile_map_spawnable.rs  tilemap.rs  unit.rs  unit_animation.rs  unit_spawnable.rs
src/robots/: mod.rs  rk550.rs
