[package]
name = "robots-or-smth"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"