[package]
name = "robots-or-smth"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
bevy_networking_turbulence = { git = "https://github.com/smokku/bevy_networking_turbulence" }
ron = "0.6"
anyhow = "1.0"
typetag = "0.1"
lazy_static = "1.4"
clap = "3.0.0-beta.2"
simple_logger = "1.11"
rand = "0.8"